--- a/nginx.conf
+++ b/nginx.conf
@@ -12,4 +12,7 @@ server {
   location /api/ {
     proxy_pass http://app:5000/;
   }
+  location /api/doc/ {
+      proxy_pass http://swagger:8080/;
+    }
 }
